# lcf-test-agent

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  start.command
docs/: architecture.md  logging.md  testing.md
scripts/: start.sh
src/local_test_agent/: __init__.py  bootstrap.py  config.py  main.py
src/local_test_agent/adapters/: __init__.py  llm.py  secret_store.py  yunxiao.py
src/local_test_agent/agents/: __init__.py  automation_planning.py  base.py  defect_draft.py  regression_routing.py  requirement_analysis.py
src/local_test_agent/controller/: __init__.py  workbench_controller.py
src/local_test_agent/models/: __init__.py  schemas.py
src/local_test_agent/services/: __init__.py  artifact_collector.py  openapi_parser.py  report_builder.py  runtime_logger.py  scenario_index.py  test_executor.py
src/local_test_agent/store/: __init__.py  config_store.py  database.py  llm_log_store.py  runtime_log_store.py
src/local_test_agent/ui/: __init__.py  main_window.py  theme.py  widgets.py  worker.py
src/local_test_agent/ui/pages/: __init__.py  automation_page.py  business_category_page.py  execution_page.py  regression_page.py  reports_page.py  requirement_page.py  settings_page.py
tests/: conftest.py  test_business_category_page.py  test_config_store.py  test_generated_placeholder.py  test_llm_adapter.py  test_regression_and_reports.py  test_requirement_flow.py  test_requirement_page.py  test_runtime_logging.py  test_settings_page.py  test_ui_button_feedback.py  test_worker.py
