[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-test-agent"
version = "0.1.0"
description = "本地个人测试智能体工作台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "pydantic>=2.7",
    "pydantic-ai-slim[openai]>=1.70.0",
    "pytest>=8.2",
    "httpx[socks]>=0.27",
    "playwright>=1.46",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0",
]

[project.scripts]
lcf-test-agent = "local_test_agent.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
